deps/v8/test/message/fail/nf-yield-in-generator.out
*%(basename)s:6: SyntaxError: Unexpected identifier 'yield'
  function yield() {}
           ^^^^^
SyntaxError: Unexpected identifier 'yield'
